sec.Ergebnisse - small corrections

--- a/content/3_ergebnisse.tex
+++ b/content/3_ergebnisse.tex
@@ -180,35 +180,14 @@ Der Hypothesentest für Hypothese 1 mittels ANOVA liefert ein nicht-signifikante
 \subsubsection{Hypothesentest 2}
 Für die Überprüfung der Hypothese 2 wurde eine einfache lineare Regression durchgeführt, um zu untersuchen, inwiefern sich die Mediennutzung (Kriterium) durch den Prädiktor Stress vorhersagen lässt.
 
-Für die Prüfung der linearen Beziehung zwischen der abhängigen und der unabhängigen Variable wurde ein Streudiagramm erstellt (siehe Anhang \ref{app:Hypo2_Streudiagramm}  \textit{Abbildung: \nameref{fig:AppStreudiagrammMedienPsq}} ). Darin ist praktisch keine Beziehung zwischen den Variablen zu erkennen. Aus diesem Grund wurde für die weitere Berechnung eine Kurvenanpassung vorgenommen (quadratisch und kubisch). Dadurch wurde der Zusammenhang der Regressionsanalyse transformiert, wodurch er linear wird \cite{UniversitatZurich2018}.
-
-Für die Prüfung der Gauss-Markov-Annahme 3 \cite{UniversitatZurich2018} wurde ein Streudiagramm der standardisierten, geschätzten Werte von y (auf der x-Achse) und der standardisierten Fehlerwerte (Residuen auf der y-Achse) erstellt (siehe Anhang \ref{app:Hypo2_Streudiagramm} \textit{Abbildung: \nameref{fig:AppStreudiagrammResiduen}}). Anhand von diesem Diagramm wurde visuell geprüft, ob über den gesamten Wertebereich der geschätzte Wert der Fehler im Mittel 0 beträgt. Dies ist in etwa der Fall, dabei gleichen sich die negativen und positiven Abweichungen von 0 auf der y-Achse im Mittel aus. 
-
-Die Prüfung der Varianzgleichheit oder auch Homoeskedastizität (Gauss-Markov-Annahme 5) wurde im oben bereits genannten Streudiagramm der standardisierten Fehlerwerte durchgeführt. Dabei liegen die Punkte mehr oder weniger gleichmässig über die horizontale Achse verteilt \cite{Hemmerich2018} und die Annahme ist gegeben.
-
-Zudem wird in diesem Datenset davon ausgegangen, dass die Fehlerwerte nicht voneinander abhängen, somit Unabhängigkeit des Fehlerwerts vorherrscht (vgl. oben genannten Streudiagramm).
-
-Die Prüfung der Normalverteilung des Fehlerwerts wurde anhand eines Histogramms visuell geprüft (siehe Anhang \ref{app:Hypo2_Histogramm} \textit{Abbildung: \nameref{fig:AppHistogrammResiduen}}). Dabei kann von einer Verletzung dieser Voraussetzung ausgegangen werden. Das Modell wurde trotzdem weitergeführt.
-
-Insgesamt wurden alle Voraussetzungen als mehr oder weniger akzeptabel eingeschätzt. Wobei bei der linearen Beziehung zusätzlich eine Kurvenanpassung quadratisch und kubisch vorgenommen wurde.
+Die Voraussetzungen für die einfache lineare Regressionsanalyse wurde anhand \citeA{UniversitatZurich2018} und \citeA{Hemmerich2018} durchgeführt. Die Prüfung der linearen Beziehung zwischen der abhängigen und der unabhängigen Variable erfolgte mittels Streudiagramm (siehe Anhang \ref{app:Hypo2_Streudiagramm}  \textit{Abbildung: \nameref{fig:AppStreudiagrammMedienPsq}} ). Darin ist praktisch keine Beziehung zwischen den Variablen zu erkennen. Aus diesem Grund wurde für die weitere Berechnung eine Kurvenanpassung vorgenommen (quadratisch und kubisch). Dadurch wurde der Zusammenhang der Regressionsanalyse transformiert, wodurch er linear wird \cite{UniversitatZurich2018}. Die Prüfung der Gauss-Markov-Annahme 3 \cite{UniversitatZurich2018} wurde mittels Streudiagramm der standardisierten, geschätzten Werte von y (auf der x-Achse) und der standardisierten Fehlerwerte (Residuen auf der y-Achse) ermittelt (siehe Anhang \ref{app:Hypo2_Streudiagramm} \textit{Abbildung: \nameref{fig:AppStreudiagrammResiduen}}). Anhand von diesem Diagramm wurde visuell geprüft, ob über den gesamten Wertebereich der geschätzte Wert der Fehler im Mittel 0 beträgt. Dies ist in etwa der Fall, dabei gleichen sich die negativen und positiven Abweichungen von 0 auf der y-Achse im Mittel aus. Die Prüfung der Varianzgleichheit oder auch Homoeskedastizität (Gauss-Markov-Annahme 5) wurde im oben bereits genannten Streudiagramm der standardisierten Fehlerwerte durchgeführt. Dabei liegen die Punkte mehr oder weniger gleichmässig über die horizontale Achse verteilt und die Annahme ist gegeben. Zudem wird in diesem Datenset davon ausgegangen, dass die Fehlerwerte nicht voneinander abhängen, somit Unabhängigkeit des Fehlerwerts vorherrscht (vgl. oben genannten Streudiagramm). Die Prüfung der Normalverteilung des Fehlerwerts wurde anhand eines Histogramms visuell geprüft (siehe Anhang \ref{app:Hypo2_Histogramm} \textit{Abbildung: \nameref{fig:AppHistogrammResiduen}}). Dabei kann von einer Verletzung dieser Voraussetzung ausgegangen werden. Das Modell wurde trotzdem weitergeführt. Insgesamt wurden alle Voraussetzungen als mehr oder weniger akzeptabel eingeschätzt. Wobei bei der linearen Beziehung zusätzlich eine Kurvenanpassung quadratisch und kubisch vorgenommen wurde.
 
 Der Hypothesentest für die Hypothese 2 mittels einfacher linearer Regression liefert ein nicht signifikantes Ergebnis. Das Stressempfinden der Eltern geht somit nicht mit einer höheren Mediennutzung einher (F(1,202) = .396, $p$=.530). Die quadratische Kurvenanpassung ergab ein etwas besseres Bild, jedoch ein ebenso nicht signifikantes Ergebnis (F(2,201) = 3.085, $p$=.048). Dies konnte auch in der kubischen Kurvenanpassung festgestellt werden (F(3,200) = 2.707, $p$=.046). Siehe dazu auch Anhang \ref{app:Hypo2_Streudiagramm} \textit{Abbildung: \nameref{fig:AppHypo2StreudiagrammKurvenanpassung}}. Die Nullhypothese $H2_{0}$ muss somit angenommen werden.
 
 \subsubsection{Hypothesentest 3}
 Für die Überprüfung der Hypothese 2 wurde eine einfache lineare Regression durchgeführt, um zu untersuchen, inwiefern sich das subjektive Wohlbefinden (Kriterium) durch den Prädiktor Mediennutzung vorhersagen lässt.
 
-
-Für die Prüfung der linearen Beziehung zwischen der abhängigen und der unabhängigen Variable wurde ein Streudiagramm erstellt (siehe Anhang \ref{app:Hypo3_Streudiagramm}  \textit{Abbildung: \nameref{fig:AppHypo3Streudiagramm}}). Darin kann von einer leichten linearen Beziehung ausgegangen werden.
-
-Für die Prüfung der Gauss-Markov-Annahme 3 \cite{UniversitatZurich2018} wurde ein Streudiagramm erstellt (siehe Anhang \ref{app:Hypo3_Streudiagramm} \textit{Abbildung: \nameref{fig:AppHypo3StreudiagrammResiduen}}. Die Annahme wurde als gegeben eingeschätzt. 
-
-Die Prüfung der Varianzgleichheit oder auch Homoeskedastizität (Gauss-Markov-Annahme 5) wurde im oben bereits genannten Streudiagramm der standardisierten Fehlerwerte durchgeführt. Es scheint, als ob die Punkte auf der horizontalen Achse auf der linken Seite verdichtet zu liegen kommen \cite{Hemmerich2018}. Diese Annahme wäre verletzt und nicht gegeben. Das Modell wurde trotzdem fortgeführt.
-
-Zudem wird in diesem Datenset davon ausgegangen, dass die Fehlerwerte nicht voneinander abhängen, somit Unabhängigkeit des Fehlerwerts vorherrscht (vgl. oben genannten Streudiagramm).
-
-Die Prüfung der Normalverteilung des Fehlerwerts wurde anhand eines Histogramms visuell geprüft (siehe Anhang \ref{app:Hypo3_Histogramm} \textit{Abbildung: \nameref{fig:AppHistogrammResiduen}}) und als gegeben eingestuft.
-
-Insgesamt wurden alle Voraussetzungen als mehr oder weniger akzeptabel eingeschätzt.
+Die Voraussetzungen für die einfache lineare Regressionsanalyse wurde anhand \citeA{UniversitatZurich2018} und \citeA{Hemmerich2018} durchgeführt. Die Prüfung der linearen Beziehung zwischen der abhängigen und der unabhängigen Variable erfolgte mittels Streudiagramm (siehe Anhang \ref{app:Hypo3_Streudiagramm}  \textit{Abbildung: \nameref{fig:AppHypo3Streudiagramm}}). Darin kann von einer leichten linearen Beziehung ausgegangen werden. Die Prüfung der Gauss-Markov-Annahme 3 \cite{UniversitatZurich2018} wurde ein Streudiagramm erstellt (siehe Anhang \ref{app:Hypo3_Streudiagramm} \textit{Abbildung: \nameref{fig:AppHypo3StreudiagrammResiduen}}. Die Annahme wurde als gegeben eingeschätzt. Die Prüfung der Homoeskedastizität (Gauss-Markov-Annahme 5) wurde im oben bereits genannten Streudiagramm der standardisierten Fehlerwerte durchgeführt. Es scheint, als ob die Punkte auf der horizontalen Achse auf der linken Seite verdichtet zu liegen kommen \cite{Hemmerich2018}. Diese Annahme wäre verletzt und nicht gegeben. Das Modell wurde trotzdem fortgeführt. Zudem wurde in diesem Datenset davon ausgegangen, dass die Fehlerwerte nicht voneinander abhängen, somit Unabhängigkeit des Fehlerwerts vorherrschte (vgl. oben genannten Streudiagramm) und die Normalverteilung des Fehlerwerts visuell als gegeben betrachtetn werden kann (siehe Anhang \ref{app:Hypo3_Histogramm} \textit{Abbildung: \nameref{fig:AppHistogrammResiduen}}). Insgesamt wurden alle Voraussetzungen als mehr oder weniger akzeptabel eingeschätzt und das Modell wie in Hypothese 3 vorgeschlagen berechnet.
 
 Der Hypothesentest für die Hypothese 3 mittels einfacher linearer Regression liefert ein nicht signifikantes Ergebnis. Es gibt keinen statistischen Zusammenhang zwischen dem Stressempfinden und dem subjektiven Wohlbefinden der Stichprobe (F(1,202) = 1.837, $p$=.177).  Die Nullhypothese $H3_{0}$ muss angenommen werden.
 
