Inhaltsverzeichnis für Anhang erstellt

--- a/header.tex
+++ b/header.tex
@@ -28,6 +28,7 @@
 \usepackage{appendix}
 \usepackage{nicefrac} % Darstellung von Brüchen im Text e.g. 1/2
 \usepackage{listings} % Darstellung von SW-Code
+\usepackage{tabu}
 
 
 % Für Verweise innerhalb Doc (siehe https://strobelstefan.org/?p=145) -> funktioniert nicht mich package hyperref!
