--- a/main.tex
+++ b/main.tex
@@ -82,6 +82,8 @@ Bindungsstil, Stress und Wohlbefinden - Faktoren des Medienverhaltens von Eltern
 \newpage
 
 % Anhang
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 %\pagenumbering{arabic}
 \pagenumbering{Roman}
 \appendix 
@@ -92,6 +94,10 @@ Bindungsstil, Stress und Wohlbefinden - Faktoren des Medienverhaltens von Eltern
 \addappheadtotoc
 %\addtocontents{toc}{\protect\setcounter{tocdepth}{-1}}
 
+% Inhaltsverzeichnis Anhang
+\section{Inhaltsverzeichnis Anhang}\label{app:Inhaltsverzeichnis}
+\input{content/Anhang/Inhaltsverzeichnis.tex}
+\newpage
 
 % Stichprobe
 \section{Gesamtstichprobe}\label{app:Gesamtstichprobe}
