sec-Ergebnisse: Zusatz inkl. Anhang Medientätigkeiten

--- a/content/3_ergebnisse.tex
+++ b/content/3_ergebnisse.tex
@@ -196,14 +196,17 @@ Für die Überprüfung der Hypothese 4 wurde eine einfaktoriellen Varianzanalyse
 
 Die Überprüfung der Varianzhomogenität erfolgte mit dem Levene-Test, gemäß dem wir eine Gleichheit der Varianzen annehmen können (Levene-Test; $p$ = .708). 
 
-Der Hypothesentest für Hypothese 4 mittels ANOVA liefert ein nicht-signifikantes Ergebnis. Die Bindung von sicher und unsicher zusammen mit dem Stressempfinden ergaben keinen statistisch signifikanten Unterschied auf die gesamte Mediennutzung der Stichprobe ($F$(2,201) = .206, $p$=.814, partielles $\eta^2$=.002, $N$=204). Basierend auf diesen Ergebnissen muss die Nullhypothese $H4_{0}$ angenommen werden. 
+Der Hypothesentest für Hypothese 4 mittels ANOVA liefert ein nicht-signifikantes Ergebnis. Die Bindung von sicher und unsicher zusammen mit dem Stressempfinden ergaben keinen statistisch signifikanten Unterschied auf die gesamte Mediennutzung der Stichprobe ($F$(2,201) = .206, $p$=.814, partielles $\eta^2$=.002, $n$=204). Basierend auf diesen Ergebnissen muss die Nullhypothese $H4_{0}$ angenommen werden. 
 
 % ---------------------------------------
-\subsection{TBD: Zusätzliche Analysen} \label{sec:ZusätzlicheAnalysen}
+\subsection{Zusätzliche Analysen} \label{sec:ZusätzlicheAnalysen}
+In diesem Abschnitt sollen zusätzliche Analysen besprochen werden, die über die gestellten Hypothesen hinausgehen und diese ergänzen. Die im Folgenden dargestellten Berechnungen lehnen sich an die bereits dargestellten Berechnungen der Hypothesen 1 bis 4, ohne jedoch auf die einzelnen Berechnungsschritte im gleichen Umfang einzugehen. Dies gilt vor allem für die Prüfung der Voraussetzungen. Auf diese wird nur in Ausnahmefälle näher eingegangen, da davon ausgegangen wird, dass diese im Bezug zu den Berechnungen der Hypothesen nicht markant abweichen.
+
+In den Hypothesen 1 bis 4 wurde jeweils die gesamte Mediennutzung verwendet. Diese wurde jedoch anhand dem Zustand des Kindes, ob dieses wach war oder geschlafen hat, erfasst. Anhand dieser Unterteilung werden die Hypothesen 1 bis 4 wiederholt, was zusätzlich zwei Resultate pro Hypothese lieferte, nämlich eines bei dem die Mediennutzung bei einem wachen Kind stattgefunden hat und eines, bei dem das Kind geschlafen hat. Bei keinem der zusätzlichen acht Resultate wurde ein signifikantes Ergebnis erreicht. Somit scheint es hinsichtlich der Hypothesen keine Rolle zu spielen, ob das Kind während der Betreuung wach war, oder geschlafen hat (siehe Ergebnisse im Anhang \ref{app:ZusammenzugResultate}: \textit{\nameref{app:ZusammenzugResultate}}). 
+
+Wie bereits oben beschrieben, wurde die gesamte Mediennutzung in die Berechnung der Hypothesen einbezogen. Vollständigkeitshalber wurde die Berechnung von Hypothese 1 für alle einzelnen Medientätigkeiten wiederholt. Bei keinem der elf erfragten Tätigkeiten konnte ein signifikantes Resultat gefunden werden. Somit scheinen die einzelnen Medientätigkeiten keinen Zusammenhang hinsichtlich der Bindung zu ergeben (siehe Ergebnisse im Anhang \ref{app:ResultateMedientaetigkeiten}: \textit{\nameref{app:ResultateMedientaetigkeiten}}).
 
 \begin{itemize}
-    \item Medienverhalten der Eltern wenn Kind schläft und wach ist -> Zusammenhang auf die Bindung.
-    \item Medienverhalten nach Gebiet unterteilen -> smartphone tätigkeiten.
     \item Ergebnisse anhand W M unterteilen. -> generell die demographischen Daten einbeziehen.
 \end{itemize}
 
