--- a/main.tex
+++ b/main.tex
@@ -163,6 +163,18 @@ Bindungsstil, Stress und Wohlbefinden - Faktoren des Medienverhaltens von Eltern
 \input{content/Anhang/Hypo3_Histogramm.tex}
 \newpage
 
+% Zusammengezogenen Resultate
+\section{Zusammenzug der Hypothesen-Resultate}\label{app:ZusammenzugResultate}
+\input{content/Anhang/ZusammenzugResultate.tex}
+\newpage
+
+% Resultate Medientätigkeiten
+\section{Resultat einzelner Medientätigkeiten}\label{app:ResultateMedientaetigkeiten}
+\input{content/Anhang/ResultateMedientaetigkeiten.tex}
+\newpage
+
+
+
 % AAS Fragebogen
 \section{Die Adult Attachment Scale (AAS)}\label{app:AAS}
 \input{content/Anhang/AAS.tex}
