sec:Ergebnisse - Zusätzliche Analysen abgeschlossen

--- a/content/3_ergebnisse.tex
+++ b/content/3_ergebnisse.tex
@@ -182,14 +182,14 @@ Für die Überprüfung der Hypothese 2 wurde eine einfache lineare Regression du
 
 Die Voraussetzungen für die einfache lineare Regressionsanalyse wurde anhand \citeA{UniversitatZurich2018} und \citeA{Hemmerich2018} durchgeführt. Die Prüfung der linearen Beziehung zwischen der abhängigen und der unabhängigen Variable erfolgte mittels Streudiagramm (siehe Anhang \ref{app:Hypo2_Streudiagramm}  \textit{Abbildung: \nameref{fig:AppStreudiagrammMedienPsq}} ). Darin ist praktisch keine Beziehung zwischen den Variablen zu erkennen. Aus diesem Grund wurde für die weitere Berechnung eine Kurvenanpassung vorgenommen (quadratisch und kubisch). Dadurch wurde der Zusammenhang der Regressionsanalyse transformiert, wodurch er linear wird \cite{UniversitatZurich2018}. Die Prüfung der Gauss-Markov-Annahme 3 \cite{UniversitatZurich2018} wurde mittels Streudiagramm der standardisierten, geschätzten Werte von y (auf der x-Achse) und der standardisierten Fehlerwerte (Residuen auf der y-Achse) ermittelt (siehe Anhang \ref{app:Hypo2_Streudiagramm} \textit{Abbildung: \nameref{fig:AppStreudiagrammResiduen}}). Anhand von diesem Diagramm wurde visuell geprüft, ob über den gesamten Wertebereich der geschätzte Wert der Fehler im Mittel 0 beträgt. Dies ist in etwa der Fall, dabei gleichen sich die negativen und positiven Abweichungen von 0 auf der y-Achse im Mittel aus. Die Prüfung der Varianzgleichheit oder auch Homoeskedastizität (Gauss-Markov-Annahme 5) wurde im oben bereits genannten Streudiagramm der standardisierten Fehlerwerte durchgeführt. Dabei liegen die Punkte mehr oder weniger gleichmässig über die horizontale Achse verteilt und die Annahme ist gegeben. Zudem wird in diesem Datenset davon ausgegangen, dass die Fehlerwerte nicht voneinander abhängen, somit Unabhängigkeit des Fehlerwerts vorherrscht (vgl. oben genannten Streudiagramm). Die Prüfung der Normalverteilung des Fehlerwerts wurde anhand eines Histogramms visuell geprüft (siehe Anhang \ref{app:Hypo2_Histogramm} \textit{Abbildung: \nameref{fig:AppHistogrammResiduen}}). Dabei kann von einer Verletzung dieser Voraussetzung ausgegangen werden. Das Modell wurde trotzdem weitergeführt. Insgesamt wurden alle Voraussetzungen als mehr oder weniger akzeptabel eingeschätzt. Wobei bei der linearen Beziehung zusätzlich eine Kurvenanpassung quadratisch und kubisch vorgenommen wurde.
 
-Der Hypothesentest für die Hypothese 2 mittels einfacher linearer Regression liefert ein nicht signifikantes Ergebnis. Das Stressempfinden der Eltern geht somit nicht mit einer höheren Mediennutzung einher (F(1,202) = .396, $p$=.530). Die quadratische Kurvenanpassung ergab ein etwas besseres Bild, jedoch ein ebenso nicht signifikantes Ergebnis (F(2,201) = 3.085, $p$=.048). Dies konnte auch in der kubischen Kurvenanpassung festgestellt werden (F(3,200) = 2.707, $p$=.046). Siehe dazu auch Anhang \ref{app:Hypo2_Streudiagramm} \textit{Abbildung: \nameref{fig:AppHypo2StreudiagrammKurvenanpassung}}. Die Nullhypothese $H2_{0}$ muss somit angenommen werden.
+Der Hypothesentest für die Hypothese 2 mittels einfacher linearer Regression liefert ein nicht signifikantes Ergebnis. Das Stressempfinden der Eltern geht somit nicht mit einer höheren Mediennutzung einher (F(1,202) = .396, $p$=.530). Die quadratische Kurvenanpassung ergab ein etwas besseres Bild, jedoch ein ebenso nicht signifikantes Ergebnis ($F$(2,201) = 3.085, $p$=.048). Dies konnte auch in der kubischen Kurvenanpassung festgestellt werden ($F$(3,200) = 2.707, $p$=.046). Siehe dazu auch Anhang \ref{app:Hypo2_Streudiagramm} \textit{Abbildung: \nameref{fig:AppHypo2StreudiagrammKurvenanpassung}}. Die Nullhypothese $H2_{0}$ muss somit angenommen werden.
 
 \subsubsection{Hypothesentest 3}
 Für die Überprüfung der Hypothese 2 wurde eine einfache lineare Regression durchgeführt, um zu untersuchen, inwiefern sich das subjektive Wohlbefinden (Kriterium) durch den Prädiktor Mediennutzung vorhersagen lässt.
 
 Die Voraussetzungen für die einfache lineare Regressionsanalyse wurde anhand \citeA{UniversitatZurich2018} und \citeA{Hemmerich2018} durchgeführt. Die Prüfung der linearen Beziehung zwischen der abhängigen und der unabhängigen Variable erfolgte mittels Streudiagramm (siehe Anhang \ref{app:Hypo3_Streudiagramm}  \textit{Abbildung: \nameref{fig:AppHypo3Streudiagramm}}). Darin kann von einer leichten linearen Beziehung ausgegangen werden. Die Prüfung der Gauss-Markov-Annahme 3 \cite{UniversitatZurich2018} wurde ein Streudiagramm erstellt (siehe Anhang \ref{app:Hypo3_Streudiagramm} \textit{Abbildung: \nameref{fig:AppHypo3StreudiagrammResiduen}}. Die Annahme wurde als gegeben eingeschätzt. Die Prüfung der Homoeskedastizität (Gauss-Markov-Annahme 5) wurde im oben bereits genannten Streudiagramm der standardisierten Fehlerwerte durchgeführt. Es scheint, als ob die Punkte auf der horizontalen Achse auf der linken Seite verdichtet zu liegen kommen \cite{Hemmerich2018}. Diese Annahme wäre verletzt und nicht gegeben. Das Modell wurde trotzdem fortgeführt. Zudem wurde in diesem Datenset davon ausgegangen, dass die Fehlerwerte nicht voneinander abhängen, somit Unabhängigkeit des Fehlerwerts vorherrschte (vgl. oben genannten Streudiagramm) und die Normalverteilung des Fehlerwerts visuell als gegeben betrachtetn werden kann (siehe Anhang \ref{app:Hypo3_Histogramm} \textit{Abbildung: \nameref{fig:AppHistogrammResiduen}}). Insgesamt wurden alle Voraussetzungen als mehr oder weniger akzeptabel eingeschätzt und das Modell wie in Hypothese 3 vorgeschlagen berechnet.
 
-Der Hypothesentest für die Hypothese 3 mittels einfacher linearer Regression liefert ein nicht signifikantes Ergebnis. Es gibt keinen statistischen Zusammenhang zwischen dem Stressempfinden und dem subjektiven Wohlbefinden der Stichprobe (F(1,202) = 1.837, $p$=.177).  Die Nullhypothese $H3_{0}$ muss angenommen werden.
+Der Hypothesentest für die Hypothese 3 mittels einfacher linearer Regression liefert ein nicht signifikantes Ergebnis. Es gibt keinen statistischen Zusammenhang zwischen dem Stressempfinden und dem subjektiven Wohlbefinden der Stichprobe ($F$(1,202) = 1.837, $p$=.177).  Die Nullhypothese $H3_{0}$ muss angenommen werden.
 
 \subsubsection{Hypothesentest 4}
 Für die Überprüfung der Hypothese 4 wurde eine einfaktoriellen Varianzanalyse berechnet, um zu untersuchen, ob es einen Unterschied in der Mediennutzung abhängig zur Bindung und dem Stress gab. Analog Hypothes 1 wurde die Bindung in zwei Gruppen unterteilt: Gruppe sicher Gebundene ($N$=144, $M$=199.09, $SD$=179.017) und unsicher Gebundene ($N$=60, $M$=209.316, $SD$=165.701). Da sich die Hypothesen 1 und vier in der Berechnung ähnlich sind, wurde bei der Prüfung der Voraussetzungen für die einfaktorielle Varianzanalyse ähnlich Probleme festgestellt (siehe dazu Abschnitt \nameref{sec:Hypothesentest1}). Da es sich um die selben Variablen handelt wie bei Hypothese 1, mit Zugabe der Kovariate Stress, wurde das Modell unter Begründung der Gruppengrösse weiter gerechnet. 
@@ -204,11 +204,9 @@ In diesem Abschnitt sollen zusätzliche Analysen besprochen werden, die über di
 
 In den Hypothesen 1 bis 4 wurde jeweils die gesamte Mediennutzung verwendet. Diese wurde jedoch anhand dem Zustand des Kindes, ob dieses wach war oder geschlafen hat, erfasst. Anhand dieser Unterteilung werden die Hypothesen 1 bis 4 wiederholt, was zusätzlich zwei Resultate pro Hypothese lieferte, nämlich eines bei dem die Mediennutzung bei einem wachen Kind stattgefunden hat und eines, bei dem das Kind geschlafen hat. Bei keinem der zusätzlichen acht Resultate wurde ein signifikantes Ergebnis erreicht. Somit scheint es hinsichtlich der Hypothesen keine Rolle zu spielen, ob das Kind während der Betreuung wach war, oder geschlafen hat (siehe Ergebnisse im Anhang \ref{app:ZusammenzugResultate}: \textit{\nameref{app:ZusammenzugResultate}}). 
 
-Wie bereits oben beschrieben, wurde die gesamte Mediennutzung in die Berechnung der Hypothesen einbezogen. Vollständigkeitshalber wurde die Berechnung von Hypothese 1 für alle einzelnen Medientätigkeiten wiederholt. Bei keinem der elf erfragten Tätigkeiten konnte ein signifikantes Resultat gefunden werden. Somit scheinen die einzelnen Medientätigkeiten keinen Zusammenhang hinsichtlich der Bindung zu ergeben (siehe Ergebnisse im Anhang \ref{app:ResultateMedientaetigkeiten}: \textit{\nameref{app:ResultateMedientaetigkeiten}}).
+Wie bereits oben beschrieben, wurde die gesamte Mediennutzung in die Berechnung der Hypothesen einbezogen. Vollständigkeitshalber wurde die Berechnung von Hypothese 1 für alle einzelnen Medientätigkeiten wiederholt. Die einzelnen Medientätigkeiten waren: (1) Telefonieren,  (2) Textnachrichten lesen und schreiben (SMS, Whatsapp, etc.), (3) Emails lesen und bearbeiten, (4) Lesen / anschauen von Printmedien (Bilder-Bücher, Magazine, Zeitungen, Comics, etc.), (5) Internet nutzen (surfen, Informationen suchen, etc.), (6) Musik hören, (7) Fernsehen und Videos schauen (Sender, Netflix, DVD, etc.), (8) Radio hören, (9) Fotos oder Videos machen, (10) Video-Games spielen (Handy, Computer, Konsole, etc.) und (11) Hörspiele oder Hörbücher hören. Bei keinem der elf erfragten Tätigkeiten konnte ein signifikantes Resultat gefunden werden. Somit scheint die Mediennutzung (gemessen durch die Anzahl Minuten während der Betreuung) keinen statistisch signifikanten Unterschied ($p>.001$) hinsichtlich einer unsicheren oder sicheren Bindung zu ergeben (siehe einzelne Ergebnisse im Anhang \ref{app:ResultateMedientaetigkeiten}: \textit{\nameref{app:ResultateMedientaetigkeiten}}).
 
-\begin{itemize}
-    \item Ergebnisse anhand W M unterteilen. -> generell die demographischen Daten einbeziehen.
-\end{itemize}
+Weitere Analysen wurden mittels den erfassten demografischen Daten durchgeführt. Diese Daten lassen sich in kategoriale Daten und intervall skalierte Daten unterteilen. Kategoriale Daten sind das Geschlecht, die Einkommensstufen, die Bildungsstufen, das Geschlecht des Kindes und die Lebensform der Eltern. Intervall skalierte Daten sind das Alter der Eltern, das Alter des Kindes in Monaten, die Anzahl Tage der Fremdbetreuung und die Anzahl Personen im Haushalt. Dabei wurden kategorial skalierte Variablen als Faktoren mittels ANOVA bezüglich der abhängigen Variablen Mediennutzung, der Bindung, des Stresses und dem subjektiven Wohlbefinden durchgeführt. Die Fragestellung lautete dabei, ob sich die Mittelwerte der abhängigen Variable (z.B.: Bindungsskala \textit{Angst}, Stressindex \textit{Anspannung}, SWB, etc.) bezüglich mehreren Gruppen der unabhängigen Variable statistisch signifikant unterscheiden  (z.B.: Bildung, Geschlecht, Einkommen, etc.). Für intervall skalierte Daten wurde die Berechnung mittels einfacher linearer Regression vorgenommen. Die Fragestellung lautete dabei, ob es einen Zusammenhang zwischen der unabhängigen (z.B.: Prädiktor lter der, Eltern, Alter des Kindes, Anzahl Tage der Fremdbetreuung, etc.) und der abhängigen Variable gibt (z.B.: Kriterium Mediennutzung bei schlafendem Kind, Bindungsskala \textit{Nähe}, etc.). Dabei wurde für keine der oben beschriebene Berechnung ein statistisch signifikantes Ergebnis gefunden. Für insgesamt zwei der insgesamt 99 Kombinationen konnte ein annähernd statistisch signifikantes Ergebnis gefunden werden. Dies war zwischen der Bildung und der Bindungsskala \textit{Vertrauen} mittels ANOVA ($F$(7,209) = 3.147, $p$=.003, partielles $\eta^2$=.095, $n$=217) und der Bildung und dem Stressindex \textit{Anpassung} mittels ANOVA ($F$(7,210) = 3.328, $p$=.002, partielles $\eta^2$=.100, $n$=218).
 
 
 
