sec:Theorie anhand Inputs Christina überarbeitet.

--- a/content/2_methode.tex
+++ b/content/2_methode.tex
@@ -15,7 +15,7 @@ Am Ende der Rekrutierungsphase wurde eine Mail an alle involvierten Personen und
 Die gesamte Masterarbeit dauerte von der Erstellung der Disposition im Herbstsemester 2017 bis zur Fertigstellung der Masterarbeit Ende Frühlingssemster 2018 zwei Semester und wurde Ende Juli 2018 zur Bewertung eingereicht.
 
 % ---------------------------------------
-\subsection{Design \& Operationalisiserung} \label{sec:Design}
+\subsection{Design} \label{sec:Design}
 Bei der vorliegenden Studie handelt es sich um eine empirische Querschnitts-Studie mit quantitativem Charakter. Aus ökonomischer Sicht und bezüglich einem hohen Mass an Standardisierung wurde eine schriftliche Befragung via Internet-Fragebogen durchgeführt \cite[S.~86ff]{sedlmeier2008}. Dadurch konnten die Befragten leichter kontaktiert und ein höherer Grad an Anonymität erreicht werden. Dazu wurden die für die Hypothesen relevanten Parameter empirisch erhoben und mittels deskriptiver Statistik ausgewertet. Der Fragebogen wurde in deutscher Sprache verfasst, weshalb die Rekrutierung ausschliesslich in der deutschsprachigen Schweiz erfolgte. Eine Übersetzung der Umfrage in weiter Sprachen hätte den Umfang dieser Arbeit gesprengt, da die einzelnen Fragebögen durch eine der wissenschaft genügenden Hin- und Rückübersetzung durch Personen aus allen involvierten Muttersprachen zu erfolgen gehabt hätte \cite{Pfetsch2016}.
 
 Bezüglich Minimierung von Risiken für die Versuchspersonen wurden keine spezifischen Vorkehrungen getroffen, da von einer Unbedenklichkeit des Fragebogens bezüglich ethischen Richtlinien ausgegangen wurde.
@@ -28,10 +28,14 @@ Für die Stichprobenumfangsplanung wird ein mittlerer Effekt \cite{Cohen1988a} a
 
 Für die Beantwortung des Zusammenhangs zwischen Medienverhalten und subjektiven Wohlbefinden wird eine lineare Regressionsanalyse durchgeführt. Das Kriterium bildet das subjektive Wohlbefinden und der Prädiktor das Medienverhalten. Die Stichprobengrösse für die Beantwortung dieser Fragestellung wurde wieder mittels G*Power für eine Korrelation zweiseitig berechnet, da ein ungerichteter Zusammenhang angenommen wird. Gemäss der Einteilung von \citeA{Cohen1988a} wird ein mittlerer Effekt von $r=.3$ erwartet. Das Signifikanzniveau beträgt $\alpha=0.05$. Die Teststärke soll mindesten $1-\beta=0.95$ betragen. Gemäss diesen Vorgaben wurde eine Stichprobengrösse von 138 Probanden angestrebt.
 
-\subsubsection{Soziodemografische Daten}\label{sec:SoziodemografischeDaten}
+
+\subsubsection{Operationalisiserung} \label{sec:Operationalisierung}
+
+
+\paragraph{Soziodemografische Daten}\label{sec:SoziodemografischeDaten}
 Bei den soziodemografischen Daten wurden folgende Parameter erfasst: Geschlecht, Jahrgang (Alter), Alter des Kindes in Monaten, Geschlecht des Kindes, brutto Familieneinkommen gemäss \citeA{NZZ2014}, Bildungsabschluss gemäss \citeA{Bfsnd}, Anzahl Personen im gleichen Haushalt, Lebensform, Anzahl Tage, an denen das Kind fremdbetreut ist und der durchschnittliche Betreuungsaufwand pro Woche.
 
-\subsubsection{Medien und Mediennutzung}\label{sec:MedienMediennutzung}
+\paragraph{Medien und Mediennutzung}\label{sec:MedienMediennutzung}
 Die Fragebogenitems für die Erfassung der Medien und der Mediennutzung wurden basierend auf den Vorlagen der Studien von \citeA{Feierabend2017, Blikk2017, Waller2016, Suter2015, Feierabend2015, Kabali2015} neu zusammengestellt. Dabei stand die Mediennutzung während der Betreuung der Kinder in Minuten und das dazu verwendeten Medium im Fokus. Zudem erfolgte ein Spezifizierung der Einschätzung der Mediennutzung hinsichtlich des betreuten Kindes, ob dieses während der Betreuung wach war oder geschlafen hat. Des Weiteren wurde erfragt, ob das Medium für die Nutzung privat oder geschäftlich genutzt wurde. 
 
 Die Einschätzung der absoluten Mediennutzung der Eltern erfolgte anhand der letzten Betreuung ihrer Kinder. Es wurde davon ausgegangen, dass die Nutzung für die Probanden am einfachsten aus der Erinnerung abrufbar sei. Eine Unterteilung der Nutzung nach Wochentag oder Wochenende wurde als wenig zielführend erachtet. Für die Beantwortung der Fragestellung hätte bereits die reine Mediennutzung gereicht. Es wurde jedoch als hilfreich erachtet, zusätzliche Parameter zur reinen Nutzung zu erheben, um gegebenenfalls die Fragestellung detaillierter beantworten zu können. Erfasst wurden neben der Mediennutzung und der aufgewendeten Zeit, die dazu benutzten Medien, die im Haushalt vorhanden Geräte und auf welches der benutzen Geräte die Eltern während der Betreuung am wenigsten verzichten konnten. Zu den erfassten Medien gehörten: (1) Smartphone, (2) TV, (3) Desktop / Laptop Computer, (4) Tablet, (5) Radio / Stereoanlage / CD-Player, (6) Printmedien (Buch, Zeitung, Heft, Comic), (7) Foto- und / oder Videokamera, (8) Spielekonsole und (9) MP3 Player.
@@ -53,7 +57,7 @@ Die Gesamtsumme der Mediennutzung (MN) $MN_{Total}$ (Formel \ref{eq:MedienTotal}
 
 
 
-\subsubsection{Bindung: Adult Attachment Scale (AAS)}\label{sec:AAS}
+\paragraph{Bindung: Adult Attachment Scale (AAS)}\label{sec:AAS}
 Für die Erfassung des Bindungsstils (\textit{engl. attachment}) wurde der von \citeA{Schmidt2004} ins Deutsche übersetzte Fragebogen \textit{Adult Attachment Scale (\acrshort{aas})} von \citeA{Collins1990} verwendet. Dieser erfasst die Bindung über die Selbst\-beschreibungs\-masse, in Ahnlehnung an die 1-Item-Selbst\-beschreibungs\-masse von \citeA{Hazan1987}. Dabei gilt dieser gemäss \citeA{Fraley2000} als einer der weit verbreiteten Selbst\-er\-fassungs\-bögen im englisch\-sprachigen Raum.
 
 Der \acrshort{aas} Fragebogen besteht aus insgesamt 18 Items, die auf einer fünfstufigen Likert-Skala von \enquote{stimmt gar nicht} (1), \enquote{stimmt eher nicht} (2), \enquote{stimmt teils / teils} (3), \enquote{stimmt eher} (4) bis \enquote{stimmt genau} (5) eingeschätzt werden. Dabei werden die Skalenwerte als Summenwerte der Itemantworten jeder Skala berechnet. Der Fragebogen bezieht sich auf bindungsrelevante Einstellungen der Befragten und wird mit drei Bindungsskalen erhoben: Die Skala \textit{Nähe} (1) beschreibt das Ausmass, in dem sich eine Person mit Nähe wohl fühlt und diese Nähe nicht mit übermässigen Ängsten verbindet. Die Skala \textit{Vertrauen} (2) beschreibt das Ausmass, in dem eine Person darauf vertraut, dass andere für sie verfügbar sind und dass die Person sich diesen anderen gegebenenfalls tatsächlich anvertrauen kann. Die Skala \textit{Angst} (3) beschreibt in erster Linie Ängste, allein gelassen oder verlassen zu werden. Was sich in einem übermässigen Bedürfnis nach Nähe aus, oder in Befürchtungen, der andere würde diese Bedürnisse zurückweisen. 
@@ -107,7 +111,7 @@ Für die Einteilung in hohe und tiefe Werte der Skala Nähe, wird erst der Trenn
     AAS_{Sicher}=( AAS_{\text{\textit{N{\"a}he}}} > 1) ~AND~ (AAS_{Vertrauen} > 1) ~AND~ (AAS_{Angst} < 2)
 \end{equation}
 
-\subsubsection{Stress: Perceived Stress Questionnaire (PSQ)}\label{sec:PSQ}
+\paragraph{Stress: Perceived Stress Questionnaire (PSQ)}\label{sec:PSQ}
 Für die Erfassung der aktuellen subjektiv erlebten Belastung, wurde der \textit{Perceived Stress Questionnaire (\acrshort{psq})} von \citeA{Levenstein1993} in der deutschen Übersetzung von \citeA{Fliege2001} verwendet.
 \citeA{Levenstein1993} kreierte für den anglo-amerikanischen und italienischen Sprachraum ein Instrument, mit dem das Ausmass der subjektiv wahrgenommenen und erlebten aktuellen Belastung erfasst werden soll. Also das Ausmass aktuell wahrgenommener Belastungsfaktoren und das Erleben der eigenen Belastetheit auf der kognitiven und emotionalen Ebene \cite{Fliege2001}. Der Begriff Belastetheit soll verdeutlichen, dass es sich nicht um die Quelle der Belastung handelt, sondern die Reaktion darauf gemeint ist. Die inhaltlichen Kriterien des Fragebogens sind (vgl. ebd.): (1) Stress wird als subjektives Belastungserleben erfasst. Damit ist gemeint, dass sich die Itemformulierung so weit wie möglich an der Perspektive der Wahrnehmung und Bewertung durch die Person orientiert. (2) Belastungsfaktoren und subjektive Belastetheit sollen als übergeordnete Klassen erfasst werden. Dies wird durch eine Vermeiden von Person- und situationsspezifische Formulierungen erreicht (z.B. keine eindeutig berufsbezogene Items). (3) Es wird lediglich das Belastungserleben und nicht der konkrete Umgang mit der Belastung erfragt. Dadurch soll sich der Test von der Erfassung von Bewältigungsbemühungen abgrenzen. Das Belastungserleben wird unabhängig von der Stelle erfasst, an der sich eine Person in einem möglichen Bewältingungsprozess befindet. (4) Es wird die Selbsteinschätzung der Person erhoben und somit nur der bewusste Anteil des Belastungserlebens.
 
@@ -147,7 +151,7 @@ Für den Gesamtscore muss die Skala Freude umkodiert werden:
 
 In den Gesamtscore fliessen die oben berechneten Skalen ein und ergeben das allgemeine Stresserleben, respektive die aktuelle, subjektiv erlebte Belastung einer Person.
 
-\subsubsection{Subjektives Wohlbefinden: Subjective Happiness Scale (SHS)}\label{sec:SWB}
+\paragraph{Subjektives Wohlbefinden: Subjective Happiness Scale (SHS)}\label{sec:SWB}
 Die Erfassung des subjektiven Wohlbefindens (\acrshort{swb}) erfolgte anhand dem von \citeA{Lyubomirsky1999} entwickelten \textit{Subjective Happiness Scale (\acrshort{shs})}, in der deutschen Übersetzung und Überprüfung von \citeA{Swami2009}. Der \acrshort{shs} wurde für die Erfassung  eines allgemeinen subjektiven Wohlbefindens mittels Selbtseinschätzungsfragebogen entwickelt. Ein Wohlbefinden, dass in seiner globalen und grundsätzlichen Ausprägung erfasst wird, also ob es sich um einen glücklichen oder unglücklichen Menschen handelt  \cite[S.~139ff]{Lyubomirsky1999}.
 
 Die Skala enthält insgesamt vier Items. Zwei davon erfassen das eigene Selbstbild, basierend auf einer absoluten Einschätzung des eigenen Wohlbefindens und einer Einschätzung verglichen mit dem eigenen sozialen Umfeld. Bei den weiteren beiden Items wird die befragte Person angehalten, sich bezüglich einer individuellen Beschreibungen glücklicher und unglücklicher Menschen einzuschätzen (siehe dazu auch Anhang \ref{app:SHS}). Das Antwortformat der vier Items basiert auf einer sieben Punkte Likertskala (z.B.: 1 für \enquote{Kein glücklicher Mensch} bis 7 \enquote{Sehr glücklicher Mensch}). 
