--- a/main.tex
+++ b/main.tex
@@ -37,7 +37,7 @@ Bindungsstil, Stress und Wohlbefinden - Faktoren des Medienverhaltens von Eltern
 \setcounter{page}{1}
 \pagenumbering{Roman}
 %\renewcommand*\contentsname{\hfill Inhalt \hfill}
-%\maxtocdepth{section}
+\setcounter{tocdepth}{3}
 \tableofcontents
 \newpage
 
