--- a/content/0_Einleitung.tex
+++ b/content/0_Einleitung.tex
@@ -20,9 +20,13 @@ Psychische, physische sowohl soziale Störungen stehen im Zusammenhang mit Stres
 
 % ---------------------------------------
 \subsubsection{Forschungslücke und Ziel der Studie}
-Aufgrund der geringen Datenlage und der fehlenden Studien im Medienverhalten von Säuglingen möchte der Autor dieser Arbeit dazu beitragen, die laufende Diskussion mit empirischen Daten zu versorgen. Beim Lesen der Ratgeberliteratur wurde eine stark emotionaler Meinungsabtausch festgestellt. Das Thema scheint medial präsent zu sein und auch im privaten Umfeld scheinen die meisten eine Position, die für oder gegen dem elektronischen Medienkonsum während der Betreuung von Kleinkindern spricht, zu vertreten. Da die direkte Befragung der Säuglinge im Bezug zum Medienverhalten etwas schwierig sein dürfte, soll das Medienverhalten der Eltern im Beisein ihrer Kinder, im Rahmen einer gelungenen Eltern-Kind-Beziehung, untersucht werden. Ein weiterer Grund für diese Studie ist der Mangel an Studien, die Eltern im Umgang mit Medien und ihren Kindern in den Mittelpunkt einer Untersuchung rückt.  
+Aufgrund der geringen Datenlage und der fehlenden Studien im Bereich Medienverhalten und Säuglinge möchte der Autor dieser Arbeit dazu beitragen, die laufende Diskussion mit empirischen Daten zu versorgen. Beim Lesen der Ratgeberliteratur wurde eine stark emotionaler Meinungsabtausch festgestellt. Das Thema scheint medial präsent zu sein und auch im privaten Umfeld scheinen die meisten eine Position, die für oder gegen dem elektronischen Medienkonsum während der Betreuung von Kleinkindern spricht, zu vertreten. Da die direkte Befragung der Säuglinge im Bezug zum Medienverhalten etwas schwierig sein dürfte, soll das Medienverhalten der Eltern im Beisein ihrer Kinder, im Rahmen einer gelungenen Eltern-Kind-Beziehung, untersucht werden. Die Eltern sollen dabei die zentrale Rolle in dieser Arbeit einnehmen, da sie diejenigen sind, die in der Regel am meisten Zeit mit den Kleinkindern verbringen und den in den meisten Fällen grössten Einfluss auf sie ausüben. Dabei soll das Verhalten der Eltern im Umgang mit Medien näher betrachtet werden und mögliche moderierende Faktoren auf dieses Verhalten untersucht werden. Dieses Verhalten ist in der aktuellen Forschung nahezu unbeachtet und es herrscht ein Mangel an Studien, in denen die Eltern von Säuglingen im Umgang mit Medien im Mittelpunkt stehen. Das Thema scheint jedoch in der breiten Öffentlichkeit aktuell zu sein. 
 
-Somit ist das Ziel dieser Arbeit, die Interaktion  zwischen den Eltern und dem Kind näher zu betrachten (siehe \textit{Abbildung \ref{fig:InfografikElternKindBeziehung}: \nameref{fig:InfografikElternKindBeziehung}} auf Seite \pageref{fig:InfografikElternKindBeziehung}). Dabei liegt die Erfassung des Medienverhaltens auf Seiten der Eltern und den Entwicklungsaufgaben auf der Seite des Kindes im Fokus. Dabei soll das Medienverhalten der Eltern anhand der Bindung, dem aktuell erlebten Stress und der Auswirkung der beiden Faktoren auf das subjektive Wohlbefinden detailliert erfasst werden. 
+Das Ziel dieser Arbeit ist es, das Medienverhalten der Eltern während der Betreuung ihrer Säuglingen zu untersuchen. Dabei soll aus theoretischer Sicht die Interaktion  zwischen den Eltern und dem Kind näher betrachtet werden, um daraus mögliche, bereits erforschte Auswirkungen, auf das Medienverhalten übertragen zu können (siehe \textit{Abbildung \ref{fig:InfografikElternKindBeziehung}: \nameref{fig:InfografikElternKindBeziehung}} auf Seite \pageref{fig:InfografikElternKindBeziehung}). 
+
+Im Zusammenhang mit dem Medienverhalten der Eltern taucht das Konzept der Bindung auf \cite{Prekop2017, Weber2017, Blikk2017}. Die Bindung der Eltern soll im Bezug zur Eltern-Kind-Beziehung einen Einfluss auf das Verhalten der Eltern haben. Leider fehlen hier die notwendig wissenschaftlich fundierten Analysen. Diese Arbeit möchte diese Lücke schliessen und untersuchen, ob Bindung tatsächlich als moderierende Variable im Bezug zum Medienverhalten der Eltern betrachtet werden kann und wenn ja, in welchem Ausmass. Zudem scheint der Faktor Stress ungünstige Folgen für das Umfeld der Eltern und das Erziehungsverhalten zu haben \cite{Cina2009}. Da Bindung und Stress gemäss \citeA{Dumas1989} und \citeA{Webster-Stratton1988} Auswirkungen auf das Erziehungsverhalten der Eltern zu haben scheinen, soll der subjektiv erlebte Stress als weiteren möglichen Faktor in die Untersuchung einfliessen.  
+
+Diese Studie soll über die Erfassung des Medienverhaltens der Eltern weitere Informationen und Erkenntnisse für die Eltern-Kind-Interaktion im Medienzeitalter generieren und wissenschaftliche Daten für die weitere Diskussion bereit stellen.
 
 
 
